# MiniMIP

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  WORKSPACE  lp_g.txt  lp_s.txt  mip_tree  soplex-bazel.patch  soplex-cmake.patch  soplex.BUILD  unit_test_patch.patch
minimip/: BUILD.bazel  CMakeLists.txt  parameters_factory.h  solver.cc  solver.h  solver_context_interface.h
minimip/branching_interface/: BUILD.bazel  CMakeLists.txt  branching_factory.h  branching_interface.h  maxfractional_branching.cc  maxfractional_branching.h  random_branching.h
minimip/cutting_interface/: BUILD.bazel  CMakeLists.txt  aggregating_generator.cc  aggregating_generator.h  cuts_generator.h  cuts_runner.h  cuts_selector.h  default_runner.h  generator_factory.h  hybrid_selector.h  runner_factory.h  selector_factory.h
minimip/data_structures/: BUILD.bazel  CMakeLists.txt  cuts_data.h  mip_data.h  mip_tree.cc  mip_tree.h  mip_types.cc  mip_types.h  problem.cc  problem.h  strong_sparse_matrix.cc  strong_sparse_matrix.h  strong_sparse_vector.h
minimip/examples/: BUILD.bazel  example.cc  example.h  example_main.cc  example_test.cc
minimip/lp_interface/: BUILD.bazel  CMakeLists.txt  lpi.cc  lpi.h  lpi_factory.cc  lpi_factory.h  lpi_glop.cc  lpi_glop.h  lpi_soplex.cc  lpi_soplex.h
minimip/testing/: BUILD.bazel  gtest_main.cc  gtest_test.cc
minimip/utils/: BUILD.bazel  CMakeLists.txt  reader.cc  reader.h
patches/: abseil-cpp-20240116.2.patch  gtest-v1.14.0.patch  or-tools.patch
src/: BUILD.bazel  isolver_context.h  parameters.proto  parameters_factory.h  solver.cc  solver.h  solver_context_interface.h  solver_factory.cc  solver_factory.h
src/branching_interface/: BUILD.bazel  branching_factory.h  branching_interface.h  brule_interface.h  maxfractional_branching.cc  maxfractional_branching.h  random_branching.cc  random_branching.h  random_scoring.cc  random_scoring.h  strong_branching.cc  strong_branching.h  vscore_factory.h  vscoring_interface.h
src/cutting_interface/: BUILD.bazel  aggregating_generator.cc  aggregating_generator.h  aggregating_separator.cc  aggregating_separator.h  cut_generator.h  cut_runner.h  cut_runner_factory.h  cut_selector.h  cuts_generator.h  cuts_runner.cc  cuts_runner.h  cuts_selector.h  cuts_separator.h  default_runner.cc  default_runner.h  generator_factory.h  hybrid_selector.cc  hybrid_selector.h  runner_factory.h  selector.h  selector_factory.h  separator.h  separator_factory.h
src/cutting_interface/cut_generators/: BUILD.bazel  gomory_mixed_integer.cc  gomory_mixed_integer.h  zerohalf.cc  zerohalf.h
src/cutting_interface/cut_selectors/: BUILD.bazel  dynamic_orthogonality.h  projection_efficacy.h
src/cutting_interface/runners/: BUILD.bazel
src/cutting_interface/selectors/: BUILD.bazel  dynamic_orthogonality.cc  dynamic_orthogonality.h  projection_efficacy.cc  projection_efficacy.h
src/cutting_interface/separators/: BUILD.bazel  gomory_mixed_integer.h
src/data_structures/: BUILD.bazel  cuts_data.cc  cuts_data.h  mip_data.cc  mip_data.h  mip_tree.cc  mip_tree.h  mip_types.cc  mip_types.h  problem.cc  problem.h  solver.h  strong_sparse_matrix.cc  strong_sparse_matrix.h  strong_sparse_vector.h
src/lp_interface/: BUILD.bazel  lp_types.h  lpi.cc  lpi.h  lpi_factory.cc  lpi_factory.h  lpi_glop.cc  lpi_glop.h  lpi_review.h  lpi_soplex.cc  lpi_soplex.h  sparse_types.h  strong_sparse_matrix.cc  strong_sparse_matrix.h  strong_sparse_matrix_test.cc  strong_sparse_vector.h  strong_sparse_vector_test.cc
src/messagehandler/: BUILD.bazel  message_handler.cc  message_handler.h  message_macros.h
src/minimip/: BUILD.bazel  minimip_def.h  mip_data.cc  mip_data.h  problem.h  sparse_types.h
src/reader_interface/: BUILD.bazel  or_tools_reader.cc  or_tools_reader.h  reader.h  reader_factory.cc  reader_factory.h
src/utils/: BUILD.bazel  or_tools_reader.cc  or_tools_reader.h  reader.cc  reader.h
unit_tests/: BUILD.bazel  CMakeLists.txt  bases.cc  bound_changes.cc  change(memoryleak).cc  change.cc  gtest_main.cc  lpi_test.cc  matrix.cc  mip_data_test.cc  solve.cc  solve_loop_test.cc  solver_test.cc  utils.cc  utils.h
unit_tests/branching_interface/: BUILD.bazel  CMakeLists.txt  branching_test.cc
unit_tests/cutting_interface/: BUILD.bazel  CMakeLists.txt  aggregating_generator_test.cc  aggregating_separator_test.cc  cut_generator_test.cc  cut_runner_test.cc  cut_selector_test.cc  hybrid_selector_test.cc  runner_test.cc
unit_tests/cutting_interface/cut_generators/: BUILD.bazel
unit_tests/cutting_interface/cut_selectors/: BUILD.bazel
unit_tests/cutting_interface/runners/: BUILD.bazel
unit_tests/cutting_interface/selectors/: BUILD.bazel  dynamic_orthogonality_test.cc  projection_efficacy_test.cc
unit_tests/cutting_interface/separators/: BUILD.bazel  gomory_mixed_integer_test.cc  zerohalf_test.cc
unit_tests/data_structures/: BUILD.bazel  CMakeLists.txt  cuts_data_test.cc  mip_data_test.cc  mip_tree_test.cc  problem_test.cc  strong_sparse_matrix_test.cc  strong_sparse_vector_test.cc
unit_tests/lp_interface/: BUILD.bazel  CMakeLists.txt  bases.cc  bound_changes.cc  change.cc  lpi_test.cc  solve.cc
unit_tests/reader_interface/: BUILD.bazel  or_tools_reader_test.cc
unit_tests/util/: BUILD.bazel  or_tools_reader_test.cc
unit_tests/utils/: BUILD.bazel  CMakeLists.txt  or_tools_reader_test.cc  reader_test.cc
