load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "parameters_proto",
    srcs = ["parameters.proto"],
    deps = [],
)

cc_proto_library(
    name = "parameters_cc_proto",
    deps = [
        ":parameters_proto",
    ],
)

cc_library(
    name = "solver",
    srcs = [],
    hdrs = ["solver.h"],
    deps = [
        ":parameters_cc_proto",
        "//src/cutting_interface:cuts_runner",
        "//src/data_structures:cuts_data",
        "//src/data_structures:mip_data",
        "//src/data_structures:problem",
        "//src/lp_interface:lpi",
        "@com_google_ortools//ortools/base:status_builder",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)

cc_library(
    name = "solver_factory",
    srcs = ["solver_factory.cc"],
    hdrs = ["solver_factory.h"],
    deps = [
        ":parameters_cc_proto",
        "//src/cutting_interface:runner_factory",
        "//src/cutting_interface:separator_factory",
        "//src/cutting_interface:selector_factory",
        "//src/data_structures:cuts_data",
        "//src/data_structures:mip_data",
        "//src/data_structures:problem",
        "//src/lp_interface:lpi_factory",
        "@com_google_ortools//ortools/base:status_builder",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)
