load("@rules_cc//cc:defs.bzl", "cc_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "parameters_proto",
    srcs = ["parameters.proto"],
    deps = [],
)

cc_proto_library(
    name = "parameters_cc_proto",
    deps = [
        ":parameters_proto",
    ],
)

cc_library(
    name = "solver_context_interface",
    hdrs = ["solver_context_interface.h"],
    deps = [
        "//src/cutting_interface:cuts_runner",
        "//src/data_structures:cuts_data",
        "//src/data_structures:mip_data",
        "//src/data_structures:mip_tree",
        "//src/data_structures:problem",
        "//src/lp_interface:lpi",
    ],
)

cc_library(
    name = "solver",
    srcs = ["solver.cc"],
    hdrs = ["solver.h"],
    deps = [
        ":parameters_cc_proto",
        ":solver_context_interface",
        "//src/lp_interface:lpi_factory",
        "//src/cutting_interface:runner_factory",
    ],
)
