# Testing utilities.
load("@rules_cc//cc:defs.bzl", "cc_library")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "utils",
    hdrs = ["utils.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest",
        "@com_google_ortools//ortools/base:status_macros",
    ],
)

cc_library(
    name = "gtest_main",
    srcs = ["gtest_main.cc"],
    deps = [
        "//src/data_structures:strong_sparse_vector",
        "@com_google_googletest//:gtest",
        "@com_google_ortools//ortools/base",
    ],
    alwayslink = True,
)
