# Testing utilities.
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# All other packages in MiniMIP may use any of the testing utils.
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "gtest_main",
    srcs = ["gtest_main.cc"],
    deps = [
        "@com_google_googletest//:gtest",
        "@com_google_ortools//ortools/base",
    ],
    alwayslink = True,
)

cc_test(
    name = "gtest_test",
    size = "small",
    srcs = ["gtest_test.cc"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "@com_google_ortools//ortools/base",
    ],
)
